# viola

./: .gitignore  Cargo.toml  Makefile.toml  Readme.md  azure-pipelines.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
druid-gui/: Cargo.toml
druid-gui/src/: main.rs
electron/: index.html  index.js  package-lock.json  package.json
migrations/2018-03-17-155829_music/: down.sql  up.sql
src/: albumviewstore.rs  db.rs  dbus.rs  dbus_adapter.rs  dbus_interface.rs  dbus_mpris_mediaplayer.rs  dbus_mpris_player.rs  gstreamer_wrapper.rs  gui.rs  libraryviewstore.rs  loaded_playlist.rs  main.rs  maingui.rs  maingui_web.rs  my_websocket.rs  playlist.rs  playlist_manager.rs  playlist_tabs.rs  playlistmanager.rs  schema.rs  smartplaylist_parser.rs  types.rs  utils.rs
tests/: playlists.toml  tracks.toml
ui/: main.glade  main.qml
viola-code/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
viola-code/src/: extension.ts
viola_common/: Cargo.toml
viola_common/src/: lib.rs  schema.rs
viola_gui/: README.md  pubspec.yaml
viola_gui/android/app/: build.gradle
viola_gui/android/app/src/main/: AndroidManifest.xml
viola_gui/android/app/src/main/kotlin/com/example/viola_gui/: MainActivity.kt
viola_gui/android/app/src/profile/: AndroidManifest.xml
viola_gui/ios/Runner/: Info.plist
viola_gui/ios/Runner.xcodeproj/: project.pbxproj
viola_gui/lib/: main.dart
viola_gui/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
viola_gui/test/: widget_test.dart
viola_gui/web/: index.html
vscode-ext/: README.md  package-lock.json  package.json
vscode-ext/src/: extension.ts
web_gui/: .eslintrc.json  index.html  index.js  index.tsx  libraryviews.js  libraryviews.tsx  mytreeview.js  package-lock.json  package.json  smartplaylistview.js  songview.js  songview.tsx  tsconfig.json  tslint.json  webpack.config.js
web_gui/src/: Cell.tsx  DeleteRangeButton.tsx  LibraryDrawer.tsx  LibraryMenu.tsx  LibraryView.tsx  MyTreeView.tsx  PlaylistTab.tsx  SmartPlaylistView.tsx  SongView.tsx  TransportButton.tsx  index.tsx  libraryviews.tsx  mytreeview.tsx  smartplaylistview.tsx  songview.tsx
web_gui_seed/: Cargo.toml  index.html  package-lock.json  package.json
web_gui_seed/src/: main.rs  messages.rs  models.rs  websocket.rs
web_gui_yew/: Cargo.toml  index.css  index.html  package-lock.json  package.json
web_gui_yew/src/: button.rs  delete_range_dialog.rs  main.rs  play_dialog.rs  sidebar.rs  status.rs  tabs.rs  tracks.rs  treeview.rs  utils.rs  web_gui_yew.code-workspace
