[package]
name = "viola"
version = "0.6.0"
license = "GPL-3.0-only"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }
directories = { workspace = true }
diesel = { workspace = true, features = ["sqlite", "r2d2"] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
env_logger = { workspace = true }
futures = { workspace = true }
gstreamer = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
log = { workspace = true, features = ["max_level_debug", "release_max_level_warn"] }
open = { workspace = true }
parking_lot = { workspace = true, features = ["serde", "deadlock_detection"] }
percent-encoding = { workspace = true }
preferences = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
taglib = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
viola_common = {path ="viola_common", features =["backend"]}
walkdir = { workspace = true }
warp = { workspace = true, features = ["compression"] }
zbus = { workspace = true }

[workspace]
members = ["web_gui_yew", "viola_common"]

[workspace.dependencies]
anyhow = "1.0.86"
clap = "4.5.8"
console_error_panic_hook = "0.1.7"
diesel = "2.1.6"
diesel_migrations = "2.2.0"
directories = "5.0.1"
env_logger = "0.11.3"
futures = "0.3.30"
gloo-net = "0.5.0"
gstreamer = "0.22.6"
humantime = "2.1.0"
indextree = "4.6.1"
indicatif = "0.17.8"
itertools = "0.13.0"
log = "0.4.22"
open = "5.2.0"
parking_lot = "0.12.3"
percent-encoding = "2.3.1"
preferences = "1.1.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.204"
serde_json = "1.0.120"
taglib = "1.0.0"
tokio = "1.38.0"
toml = "0.8.14"
walkdir = "2.5.0"
warp = "0.3.7"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = "0.21.0"
zbus = "4.3.1"
