[package]
name = "druid-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
im = "15.0.0"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
reqwest = {version = "0.11.9", features = ["json", "blocking"]}
serde = "1.0.136"
serde_json = "1.0.79"
viola_common = { path = "../viola_common" }
