[package]
name = "viola_common"
version = "1.1.0"
authors = ["Narfinger <narfinger@noreply.github.com>"]
edition = "2018"

[features]
backend = ["diesel"]

[dependencies]
diesel = { version = "2.1.3", features = ["sqlite"], optional = true }
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
