[package]
name = "viola_common"
version = "1.1.0"
authors = ["Narfinger <narfinger@noreply.github.com>"]
edition = "2018"

[features]
backend = ["diesel"]

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite"], optional = true }
serde_json = "1.0.113"
serde = { version = "1.0.195", features = ["derive"] }
