[package]
name = "viola_common"
version = "1.1.0"
authors = ["Narfinger <narfinger@noreply.github.com>"]
edition = "2018"

[features]
backend = ["diesel"]

[dependencies]
diesel = { workspace = true, features = ["sqlite"], optional = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
