[package]
name = "web_gui_seed"
version = "0.1.0"
authors = ["Narfinger <narfinger@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8.0"
serde_derive = "1.0.133"
serde_json = "1.0.78"
serde = "1.0.136"
indextree = "4.3.1"
viola_common = { path = "../viola_common" }
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
humantime = "2.1.0"
const_format = "0.2.22"
wasm-bindgen = "0.2.79"
