[package]
name = "web_gui_seed"
version = "0.4.0"
authors = ["Narfinger <narfinger@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.9.1"
serde_derive = "1.0.136"
serde_json = "1.0.81"
serde = "1.0.142"
indextree = "4.4.0"
viola_common = { path = "../viola_common" }
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
humantime = "2.1.0"
const_format = "0.2.24"
wasm-bindgen = "0.2.80"
