[package]
name = "web_gui_yew"
version = "1.1.0"
edition = "2021"

[profile.release]
# panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo-net = "0.5.0"
humantime = "2.1.0"
indextree = "4.6.0"
log = "0.4.21"
serde_json = "1.0.114"
viola_common = { path = "../viola_common" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }

