[package]
name = "web_gui_yew"
version = "1.1.0"
edition = "2021"

[profile.release]
# panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
console_error_panic_hook = { workspace = true }
futures = { workspace = true }
gloo-net = { workspace = true }
humantime = { workspace = true }
indextree = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
viola_common = { path = "../viola_common" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true, features = ["csr"] }

