[package]
name = "web_gui_yew"
version = "1.1.0"
edition = "2021"

[dependencies]
log = {workspace = true}
futures = { workspace = true }
gloo-net = "0.6.0"
humantime = { workspace = true }
indextree = "4.7.2"
serde_json = { workspace = true }
viola_common = { path = "../viola_common" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
web-sys = "0.3.72"

